feat: Implement initial EP landing page with new UI components, media assets, and updated site metadata.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AXM - Krema | Nuevo Álbum</title>
-    <meta name="description" content="Descubre AXM, el nuevo álbum de Krema. Una experiencia sonora cinematográfica e inmersiva." />
+    <title>ZAFIRO - Krema | Nuevo EP</title>
+    <meta name="description" content="Descubre ZAFIRO, el nuevo EP de Krema. Una experiencia sonora única e inmersiva." />
     <meta name="author" content="Krema" />
 
-    <meta property="og:title" content="AXM - Krema | Nuevo Álbum" />
-    <meta property="og:description" content="Descubre AXM, el nuevo álbum de Krema. Una experiencia sonora cinematográfica e inmersiva." />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/jpeg" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+
+    <meta property="og:title" content="ZAFIRO - Krema | Nuevo EP" />
+    <meta property="og:description" content="Descubre ZAFIRO, el nuevo EP de Krema. Una experiencia sonora única e inmersiva." />
     <meta property="og:type" content="music.album" />
-    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@krema_official" />
-    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:image" content="/favicon.ico" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
