chore: shorten Open Graph title content.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZAFIRO - Krema | Nuevo EP</title>
-    <meta name="description" content="Descubre ZAFIRO, el nuevo EP de Krema. Una experiencia sonora única e inmersiva." />
-    <meta name="author" content="Krema" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/jpeg" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/favicon.ico" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ZAFIRO - Krema | Nuevo EP</title>
+  <meta name="description" content="Descubre ZAFIRO, el nuevo EP de Krema. Una experiencia sonora única e inmersiva." />
+  <meta name="author" content="Krema" />
 
-    <meta property="og:title" content="ZAFIRO - Krema | Nuevo EP" />
-    <meta property="og:description" content="Descubre ZAFIRO, el nuevo EP de Krema. Una experiencia sonora única e inmersiva." />
-    <meta property="og:type" content="music.album" />
-    <meta property="og:image" content="/favicon.ico" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/jpeg" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@krema_official" />
-    <meta name="twitter:image" content="/favicon.ico" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-  </head>
+  <meta property="og:title" content="ZAFIRO - Krema" />
+  <meta property="og:description"
+    content="Descubre ZAFIRO, el nuevo EP de Krema. Una experiencia sonora única e inmersiva." />
+  <meta property="og:type" content="music.album" />
+  <meta property="og:image" content="/favicon.ico" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@krema_official" />
+  <meta name="twitter:image" content="/favicon.ico" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600;700&family=Inter:wght@400;500;600&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
