feat: Implement new CTA section component and simplify page titles.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ZAFIRO - Krema | Nuevo EP</title>
+  <title>ZAFIRO</title>
   <meta name="description" content="Descubre ZAFIRO, el nuevo EP de Krema. Una experiencia sonora única e inmersiva." />
   <meta name="author" content="Krema" />
 
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/jpeg" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/favicon.ico" />
 
-  <meta property="og:title" content="ZAFIRO - Krema" />
+  <meta property="og:title" content="ZAFIRO" />
   <meta property="og:description"
     content="Descubre ZAFIRO, el nuevo EP de Krema. Una experiencia sonora única e inmersiva." />
   <meta property="og:type" content="music.album" />
